# TorchType

./: .a3.yml  .gitignore  PROPOSAL10_COMPLETE.md  PROPOSAL3_COMPLETE.md  PROPOSAL3_FINAL_VERIFICATION.md  PROPOSAL6_SESSION_COMPLETE.md  app.py  hnf_comprehensive.aux  hnf_comprehensive.out  hnf_comprehensive.tex  hnf_comprehensive.toc  hnf_paper copy 2.tex  hnf_paper copy.tex  hnf_paper.aux  hnf_paper.out  hnf_paper.toc  hnf_parts.tex  proposal.md  proposals.md  proposals2.md  proposals3.md  run_proposals.py  run_proposals2.py
proposals/: README.md  (+32 more)
src/: CMakeLists.txt
src/implementations/proposal1/: CMakeLists.txt  build.sh  demo_enhancements.sh  demo_ultimate.sh
src/implementations/proposal1/examples/: mnist_demo.cpp  mnist_precision_demo.cpp  mnist_rigorous_test.cpp
src/implementations/proposal1/include/: actual_training_demo.h  advanced_mnist_trainer.h  mnist_trainer.h  numerical_homotopy.h  precision_autodiff.h  precision_nn.h  precision_tensor.h  rigorous_curvature.h
src/implementations/proposal1/src/: actual_training_demo.cpp  mnist_trainer.cpp  precision_nn.cpp  precision_tensor.cpp
src/implementations/proposal1/tests/: test_advanced_features.cpp  test_comprehensive.cpp  test_comprehensive_enhancements.cpp  test_comprehensive_mnist.cpp
src/implementations/proposal10/: CMakeLists.txt  INDEX.md  INDEX_ENHANCED.md  README.md  RESULTS.txt  build.sh  build_enhanced.sh  build_standalone.sh  demo_output.txt  demo_quick.sh  test_debug  test_debug.cpp
src/implementations/proposal10/examples/: comprehensive_demo.cpp  demo_comprehensive.cpp  demo_linter.cpp
src/implementations/proposal10/include/: homotopy_equivalence.hpp  mnist_demo.hpp  mnist_transformer.hpp  precision_sheaf.hpp  sheaf_cohomology.hpp  stability_linter.hpp  transformer_analyzer.hpp
src/implementations/proposal10/output/: demo_comprehensive  demo_linter  libstability_linter.dylib  test_linter  test_sheaf
src/implementations/proposal10/output_standalone/: hnf_linter_demo  hnf_linter_demo.cpp
src/implementations/proposal10/src/: patterns.cpp  precision_sheaf.cpp  sheaf_cohomology.cpp  stability_linter.cpp  transformer_analyzer.cpp
src/implementations/proposal10/tests/: test_linter.cpp  test_sheaf.cpp
src/implementations/proposal17_numgeom_ad/: README.md
src/implementations/proposal17_numgeom_ad/data/: instability_detection_results.json  transformer_attention_results.json
src/implementations/proposal17_numgeom_ad/docs/: latex_output.txt  numgeom_ad_paper_simple.aux  numgeom_ad_paper_simple.tex
src/implementations/proposal17_numgeom_ad/experiments/: exp2_instability_detection.py  exp3_transformer_attention.py
src/implementations/proposal17_numgeom_ad/src/: numgeom_ad.py
src/implementations/proposal17_numgeom_ad/tests/: test_comprehensive.py
src/implementations/proposal2/: CMakeLists.txt  DEMO_ULTIMATE.sh  QUICK_PYTHON_DEMO.sh  build.sh  build_enhanced.sh  build_ultra.sh  demo_enhancements.sh
src/implementations/proposal2/build_enhanced/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  comprehensive_mnist_demo  mnist_precision_demo  test_sheaf_cohomology
src/implementations/proposal2/build_ultra/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  comprehensive_mnist_demo  mnist_precision_demo  test_sheaf_cohomology
src/implementations/proposal2/examples/: comprehensive_mnist_demo.cpp  impossible_without_sheaf.cpp  mnist_demo.cpp
src/implementations/proposal2/include/: advanced_sheaf_theory.h  computation_graph.h  graph_builder.h  mixed_precision_optimizer.h  persistent_cohomology.h  precision_sheaf.h  z3_precision_solver.h
src/implementations/proposal2/python/: README.md  mnist_cifar_demo.py  run_all_tests.py  sheaf_precision_optimizer.py  toy_transformer_demo.py
src/implementations/proposal2/src/: advanced_sheaf_theory.cpp
src/implementations/proposal2/tests/: test_advanced_sheaf.cpp  test_comprehensive.cpp
src/implementations/proposal25/scripts/: convert_to_csv.py  experiment_adversarial_sign_flips.py
src/implementations/proposal25/src/: __init__.py  baseline_comparison.py  curvature_analysis.py  datasets.py  error_propagation.py  fairness_metrics.py  models.py
src/implementations/proposal3/: CMakeLists.txt  README.md  anti_cheating_tests.py  corrected_hnf_theory.py  demo_ultimate_enhancement.sh  download_mnist.py  master_demo.sh  practical_demo.py  run_all.sh  run_enhanced_demo.sh
src/implementations/proposal4/: CMakeLists.txt  build.sh  build_enhanced.sh  demo_enhanced.sh
src/implementations/proposal5/: ACHIEVEMENTS.md  CMakeLists.txt  DEMO_GUIDE.md  IMPLEMENTATION_STATUS.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_REPORT.md  build.sh
src/implementations/proposal6/: CMakeLists.txt  README_ENHANCEMENTS.md  build.sh  comprehensive_mnist_certificate.txt  demo_all.sh  demo_comprehensive.sh  impossibility_proof.txt  mnist_transformer_certificate.txt
src/implementations/proposal7/: CMakeLists.txt  build_and_demo.sh  run_all_demos.sh
src/implementations/proposal8/: CMakeLists.txt  README.md  README_ENHANCED.md  demo_enhanced.sh  run_all.sh
src/implementations/proposal9/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build.sh  demo_awesome.sh  demo_comprehensive_enhancement.sh  download_mnist.py  validate.sh
src/implementations/tropical_nas/: CMakeLists.txt  HOW_TO_DEMO.md  INDEX.md  QUICKSTART.md  README.md  build.sh
src/include/: curvature_database.h  numerical_type.h  operations.h  precision_analyzer.h
src/proposals/implementation_17/: Makefile
src/proposals/implementation_21/: README.md  run_all.sh
src/proposals/implementation_25/: DEMO_COMPLETE.py  ENHANCEMENT_SUMMARY.md  FINAL_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_STATUS_FINAL.md  PRODUCTION_READY_STATUS.md  QUICK_REFERENCE.md  README.md  README_COMPLETE.md  README_ENHANCED.md  README_MASTER.md  SHOW_AWESOME.py  experiment_log.txt  regenerate_all.py  regenerate_complete.py  run_complete_pipeline.py  run_end_to_end.py  run_new_extensions.py
src/src/: hnf_precision.cpp
(+479 files in other folders)
